# Attempt2

./: .pyproject.toml.swp  README!!!.txt  dump.csv  main.py  pyproject.toml
pythonProject8/: main.py
